# gesturner

./: LICENSE  README.md  pyproject.toml
gesturner/: controller.py  debug_window.py  gaze_detector.py  key_controller.py  main.py  mouth_detector.py  overlay.py
