[tool.poetry]
name = "gesturner"
version = "0.1.0"
description = "Gesture-based page turning app for music scores"
authors = ["Manabu Kikuchi <manabu.kikuchi.mobile@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "gesturner" }]
[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0"
mediapipe = "^0.10.14"
pyautogui = "^0.9.54"
pywin32 = "^306"

[tool.poetry.scripts]
gesturner = "gesturner.main:run"

[tool.poetry.dev-dependencies]
black = "^24.0.0"
isort = "^5.12.0"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
